infra/headlamp/headlamp-traefik-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - headlamp.k8s.harish2k01.xyz

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: headlamp-forwarded-headers
            namespace: headlamp
      backendRefs:
        - name: headlamp
          port: 80
